# serializer version: 1
# name: test_available_locales[bg_BG]
  dict({
    'gigya-api-key': '3__3ER_6lFvXEXHTP_faLtq6eEdbKDXd9F5GoKwzRyZq37ZQ-db7mXcLzR1Jtls5sn',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[cs_CZ]
  dict({
    'gigya-api-key': '3_oRlKr5PCVL_sPWUZdJ8c5NOl5Ej8nIZw7VKG7S9Rg36UkDszFzfHfxCaUAUU5or2',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[da_DK]
  dict({
    'gigya-api-key': '3_5x-2C8b1R4MJPQXkwTPdIqgBpcw653Dakw_ZaEneQRkTBdg9UW9Qg_5G-tMNrTMc',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[de_AT]
  dict({
    'gigya-api-key': '3__B4KghyeUb0GlpU62ZXKrjSfb7CPzwBS368wioftJUL5qXE0Z_sSy0rX69klXuHy',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[de_CH]
  dict({
    'gigya-api-key': '3_UyiWZs_1UXYCUqK_1n7l7l44UiI_9N9hqwtREV0-UYA_5X7tOV-VKvnGxPBww4q2',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[de_DE]
  dict({
    'gigya-api-key': '3_7PLksOyBRkHv126x5WhHb-5pqC1qFR8pQjxSeLB6nhAnPERTUlwnYoznHSxwX668',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[en_GB]
  dict({
    'gigya-api-key': '3_e8d4g4SE_Fo8ahyHwwP7ohLGZ79HKNN2T8NjQqoNnk6Epj6ilyYwKdHUyCw3wuxz',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[en_IE]
  dict({
    'gigya-api-key': '3_Xn7tuOnT9raLEXuwSI1_sFFZNEJhSD0lv3gxkwFtGI-RY4AgiePBiJ9EODh8d9yo',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[es_ES]
  dict({
    'gigya-api-key': '3_DyMiOwEaxLcPdBTu63Gv3hlhvLaLbW3ufvjHLeuU8U5bx3zx19t5rEKq7KMwk9f1',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[es_MX]
  dict({
    'gigya-api-key': '3_BFzR-2wfhMhUs5OCy3R8U8IiQcHS-81vF8bteSe8eFrboMTjEWzbf4pY1aHQ7cW0',
    'gigya-root-url': 'https://accounts.us1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-usw2.wrd-aws.com',
  })
# ---
# name: test_available_locales[fi_FI]
  dict({
    'gigya-api-key': '3_xSRCLDYhk1SwSeYQLI3DmA8t-etfAfu5un51fws125ANOBZHgh8Lcc4ReWSwaqNY',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_BE]
  dict({
    'gigya-api-key': '3_ZK9x38N8pzEvdiG7ojWHeOAAej43APkeJ5Av6VbTkeoOWR4sdkRc-wyF72HzUB8X',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_CH]
  dict({
    'gigya-api-key': '3_h3LOcrKZ9mTXxMI9clb2R1VGAWPke6jMNqMw4yYLz4N7PGjYyD0hqRgIFAIHusSn',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_FR]
  dict({
    'gigya-api-key': '3_4LKbCcMMcvjDm3X89LU4z4mNKYKdl_W0oD9w-Jvih21WqgJKtFZAnb9YdUgWT9_a',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[fr_LU]
  dict({
    'gigya-api-key': '3_zt44Wl_wT9mnqn-BHrR19PvXj3wYRPQKLcPbGWawlatFR837KdxSZZStbBTDaqnb',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[hr_HR]
  dict({
    'gigya-api-key': '3_HcDC5GGZ89NMP1jORLhYNNCcXt7M3thhZ85eGrcQaM2pRwrgrzcIRWEYi_36cFj9',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[hu_HU]
  dict({
    'gigya-api-key': '3_nGDWrkSGZovhnVFv5hdIxyuuCuJGZfNmlRGp7-5kEn9yb0bfIfJqoDa2opHOd3Mu',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[it_CH]
  dict({
    'gigya-api-key': '3_gHkmHaGACxSLKXqD_uDDx415zdTw7w8HXAFyvh0qIP0WxnHPMF2B9K_nREJVSkGq',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[it_IT]
  dict({
    'gigya-api-key': '3_js8th3jdmCWV86fKR3SXQWvXGKbHoWFv8NAgRbH7FnIBsi_XvCpN_rtLcI07uNuq',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[nl_BE]
  dict({
    'gigya-api-key': '3_yachztWczt6i1pIMhLIH9UA6DXK6vXXuCDmcsoA4PYR0g35RvLPDbp49YribFdpC',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[nl_NL]
  dict({
    'gigya-api-key': '3_ZIOtjqmP0zaHdEnPK7h1xPuBYgtcOyUxbsTY8Gw31Fzy7i7Ltjfm-hhPh23fpHT5',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[no_NO]
  dict({
    'gigya-api-key': '3_QrPkEJr69l7rHkdCVls0owC80BB4CGz5xw_b0gBSNdn3pL04wzMBkcwtbeKdl1g9',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[pl_PL]
  dict({
    'gigya-api-key': '3_2YBjydYRd1shr6bsZdrvA9z7owvSg3W5RHDYDp6AlatXw9hqx7nVoanRn8YGsBN8',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[pt_PT]
  dict({
    'gigya-api-key': '3__afxovspi2-Ip1E5kNsAgc4_35lpLAKCF6bq4_xXj2I2bFPjIWxAOAQJlIkreKTD',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[ro_RO]
  dict({
    'gigya-api-key': '3_WlBp06vVHuHZhiDLIehF8gchqbfegDJADPQ2MtEsrc8dWVuESf2JCITRo5I2CIxs',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[ru_RU]
  dict({
    'gigya-api-key': '3_N_ecy4iDyoRtX8v5xOxewwZLKXBjRgrEIv85XxI0KJk8AAdYhJIi17LWb086tGXR',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[sk_SK]
  dict({
    'gigya-api-key': '3_e8d4g4SE_Fo8ahyHwwP7ohLGZ79HKNN2T8NjQqoNnk6Epj6ilyYwKdHUyCw3wuxz',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[sl_SI]
  dict({
    'gigya-api-key': '3_QKt0ADYxIhgcje4F3fj9oVidHsx3JIIk-GThhdyMMQi8AJR0QoHdA62YArVjbZCt',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
# name: test_available_locales[sv_SE]
  dict({
    'gigya-api-key': '3_EN5Hcnwanu9_Dqot1v1Aky1YelT5QqG4TxveO0EgKFWZYu03WkeB9FKuKKIWUXIS',
    'gigya-root-url': 'https://accounts.eu1.gigya.com',
    'kamereon-api-key': 'YjkKtHmGfaceeuExUDKGxrLZGGvtVS0J',
    'kamereon-root-url': 'https://api-wired-prod-1-euw1.wrd-aws.com',
  })
# ---
